# api

./: .env.example  .gitignore  .travis.yml  CNAME  DATABASE_V2.puml  Pipfile  Procfile  README.md  TODO.txt  _config.yml  pyproject.toml  requirements.txt
EXAMPLE_DATA/: datadump.json  datadump.json.bak  db.sqlite3  default-settings.json  dict_deep.py  events.json  fill  migrate  migrate.py  new_datadump.json  notes.json  restore  restore.py  settings-definitions.json  settings.json  subjects.json
backend/: settings.py  temp.json  urls.py
common/: admin.py  middlewares.py  models.py  serializers.py  utils.py  views.py
common/migrations/: 0001_initial.py  0002_auto_20190805_1517.py  0002_auto_20191011_0610.py  0003_auto_20190805_1602.py  0003_defaultsetting_multiple.py  0004_auto_20190805_1603.py  0004_remove_user_logged_in.py  0005_auto_20190805_1605.py  0005_auto_20191011_2138.py  0006_auto_20190805_1644.py  0006_auto_20191011_2141.py  0007_auto_20191011_2155.py  0007_remove_setting_default.py  0008_auto_20190806_1035.py  0008_auto_20191012_1010.py  0009_auto_20190806_1803.py  0009_user_uuid.py  0010_auto_20190806_2030.py  0010_auto_20191012_1335.py  0011_auto_20191016_1600.py  (+22 more)
css_resources/: pandoc.css
docker/: Dockerfile  run.sh
docs/: index.md
homework/: admin.py  models.py  serializers.py  views.py
learn/: admin.py  models.py  serializers.py  views.py
reports/: admin.py  models.py  serializers.py  views.py
rest_framework/: api.html
schedule/: admin.py  models.py  serializers.py  views.py
users/: admin.py  models.py  serializers.py  views.py
(+90 files in other folders)
