[tool.poetry]
name = "schoolsyst-api"
version = "0.1.0"
description = "schoolsyst's API"
authors = ["ewen-lbh <ewen.lebihan7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bleach = "==3.3.0"
blessings = "==1.7"
certifi = "==2019.11.28"
chardet = "==3.0.4"
colorama = "==0.4.3"
dict-deep = "==2.0.2"
django-cors-headers = "==3.0.2"
django-extensions = "==2.2.3"
django-request-logging = "==0.7.0"
django-rest-passwordreset = "==1.0.0"
django-sendgrid-v5 = "==0.8.1"
djangorestframework = "==3.9.4"
drf-jwt = "==1.15.1"
drf-rw-serializers = "==1.0.2"
future = "==0.18.2"
idna = "==2.8"
inquirer = "==2.6.3"
prompt-toolkit = "==1.0.14"
pypandoc = "==1.4"
python-dotenv = "==0.10.3"
python-editor = "==1.0.4"
python-http-client = "==3.2.1"
python-slugify = "==4.0.0"
pytz = "==2019.3"
readchar = "==2.0.1"
regex = "==2019.8.19"
requests = "==2.22.0"
sendgrid = "==6.1.0"
six = "==1.12.0"
sqlparse = "==0.3.0"
termcolor = "==1.1.0"
text-unidecode = "==1.3"
unicode-slugify = "==0.1.3"
urllib3 = "==1.25.7"
wcwidth = "==0.1.7"
webencodings = "==0.5.1"
Django = "==2.2.13"
Pygments = "==2.4.2"
PyInquirer = "==1.0.3"
PyJWT = "==1.7.1"
Unidecode = "==1.1.1"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
